--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 				</div>
 				<div class="searchbar">
 					<form name="form1" action="http://google.com/search" target="_blank" method="get" >
-						<input type="text" autocomplete="off" placeholder="google search..." name="q" class="searchinput"></input>
+						<input type="text" autocomplete="off" placeholder="Pesquise no google..." name="q" class="searchinput"></input>
 					</form>
 				</div>
 			</div>
@@ -62,7 +62,7 @@
 				<script>
 					//document.getElementById("main").innerHTML = Date();
 					function updateClock() {
-						var days = ['SUNDAY','MONDAY','TUESDAY','WEDNESDAY','THURSDAY','FRIDAY','SATURDAY'];
+						var days = ['DOMINGO','SEGUNDA','TERÇA','QUARTA','QUINTA','SEXTA','SÁBADO'];
 						var m = new Date();
 						var dateString =
 						  (days[ m.getDay() ]) + " " +
@@ -84,10 +84,10 @@
 			</div>
 			<div class="main" id="main1">
 				<div class="sidebar" style="background-image: url(img/m1.gif);"></div>
-				<div class="welcome">お帰りなさい</div>
+				<div class="welcome">:)</div>
 				<div class="bookmarkscontainer">
 					<ul>
-						<li><a href="http://4chan.org/wg/" class="clink" target="_blank">/wg/</a>
+						<li><a href="http://27chan.org/b/" class="clink" target="_blank">/b/</a>
 						<li><a href="http://4chan.org/f/" class="clink" target="_blank">/f/</a>
 						<li><a href="http://neo-geo.com/forums/" class="clink" target="_blank">neogeo</a>
 						<li><a href="http://shmups.system11.org" class="clink" target="_blank">shmups</a>
